--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="css/weui.css">
   <link rel="stylesheet" href="css/master.css">
-  <script src="./js/jquery1.9.0.js" type="text/javascript"></script>
-  <title>Document</title>
+  <script src="js/jQuery.js" charset="utf-8"></script>
+  <title>学号绑定</title>
 </head>
 <body>
   <form class="" action="index.html" method="post">
+    <div class="iconbox"></div>
     <div class="weui-cell one">
       <div class="weui-cell__bd">
         <input type="text" class="weui-input number" placeholder="学号">
